added forked zendtech

--- a/composer.json
+++ b/composer.json
@@ -20,13 +20,18 @@
     ],
     "require": {
         "php": "^8.0",
-        "zendtech/IbmiToolkit": "^1.8.0",
+        "zendtech/IbmiToolkit": "dev-master",
         "cooperl/laravel-db2": "dev-master"
     },
     "repositories": [
         {
             "type": "vcs",
             "url": "git@github.com:keganlester/laravel-db2.git",
+            "no-api": true
+        },
+        {
+            "type": "vcs",
+            "url": "git@github.com:tompasini/IbmiToolkit.git",
             "no-api": true
         }
     ],
